<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="@dimen/horizontal_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_single_group"/>

    <ro.doruchidean.checkablebutton.SingleCheckButtonsGroup
        android:id="@+id/single_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:weightSum="4">
        <ro.doruchidean.checkablebutton.CheckableButton
            android:id="@+id/btn_cat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:text="@string/label_cat"
            app:cornerIcon="@drawable/ic_check_selected"
            app:background="@drawable/bg_checkable_state"
            />
        <ro.doruchidean.checkablebutton.CheckableButton
            android:id="@+id/btn_dog"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:text="@string/label_dog"
            app:cornerIcon="@drawable/ic_check_selected"
            app:background="@drawable/bg_checkable_state"
            />
        <ro.doruchidean.checkablebutton.CheckableButton
            android:id="@+id/btn_hamster"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:text="@string/label_hamster"
            app:cornerIcon="@drawable/ic_check_selected"
            app:background="@drawable/bg_checkable_state"
            />
        <ro.doruchidean.checkablebutton.CheckableImageButton
            android:id="@+id/btn_android"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:src="@drawable/ic_android"
            app:imageScaleType="centerCrop"
            app:cornerIcon="@drawable/ic_check_selected"
            app:background="@drawable/bg_checkable_state"
            />
    </ro.doruchidean.checkablebutton.SingleCheckButtonsGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_multi_group"
        />

    <ro.doruchidean.checkablebutton.MultipleCheckButtonsGroup
        android:id="@+id/multi_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <ro.doruchidean.checkablebutton.CheckableButton
            android:id="@+id/btn_bacon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/label_bacon"
            app:cornerIcon="@drawable/ic_check_selected"
            app:background="@drawable/bg_checkable_state"
            />
        <ro.doruchidean.checkablebutton.CheckableImageButton
            android:id="@+id/btn_pizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:src="@drawable/ic_local_pizza"
            app:cornerIcon="@drawable/ic_check_selected"
            app:background="@drawable/bg_checkable_state"
            />
        <ro.doruchidean.checkablebutton.CheckableButton
            android:id="@+id/btn_crickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/label_crickets"
            app:cornerIcon="@drawable/ic_check_selected"
            app:background="@drawable/bg_checkable_state"
            />
        <ro.doruchidean.checkablebutton.CheckableImageButton
            android:id="@+id/btn_fast_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:src="@drawable/ic_fastfood"
            app:cornerIcon="@drawable/ic_check_selected"
            app:background="@drawable/bg_checkable_state"
            />
    </ro.doruchidean.checkablebutton.MultipleCheckButtonsGroup>

    <TextView
        android:id="@+id/tv_favorite_pet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_padding"
        android:text="@string/format_pet_preference"
        />

    <TextView
        android:id="@+id/tv_favorite_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_padding"
        android:text="@string/format_food_preference"
        />

</LinearLayout>